syntax = "proto3";

package pcbook;

import "memory.proto";

option go_package = "./pb";

message CPU {
    // Brand of CPU
    string brand = 1;
    // Name of CPU
    string name = 2;
    uint32 number_core = 3;
    uint32 number_thread = 4;
    double min_ghz = 5;
    double max_ghz = 6;
}

message GPU {
    string brand =  1;
    string name = 2;
    double min_ghz = 3;
    double max_ghz = 4;
    Memory memory = 5;
}
